--- a/package.json
+++ b/package.json
@@ -15,19 +15,25 @@
     "@mdx-js/loader": "^2.1.5",
     "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^13.0.2",
+    "@tabler/icons-react": "^3.22.0",
     "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.12",
     "cheerio": "^1.0.0-rc.12",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
     "fast-glob": "^3.2.11",
     "feed": "^4.2.2",
-    "next": "13.4.12",
+    "framer-motion": "^11.11.17",
+    "lucide-react": "^0.460.0",
+    "next": "^15.0.3",
     "next-router-mock": "^0.9.3",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "remark-gfm": "^3.0.1",
-    "tailwindcss": "^3.3.3"
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "eslint": "8.45.0",
